change hdfs chart

--- a/hdfs/templates/hdfs-dn-statefulset.yaml
+++ b/hdfs/templates/hdfs-dn-statefulset.yaml
@@ -13,6 +13,9 @@ metadata:
 spec:
   serviceName: {{ template "hadoop.fullname" . }}-hdfs-dn
   replicas: {{ .Values.hdfs.dataNode.replicas }}
+  selector:
+    matchLabels:
+      app: {{ template "hadoop.name" . }}
   template:
     metadata:
       labels:
