--- a/hdfs/templates/hdfs-nn-statefulset.yaml
+++ b/hdfs/templates/hdfs-nn-statefulset.yaml
@@ -13,6 +13,9 @@ metadata:
 spec:
   serviceName: {{ template "hadoop.fullname" . }}-hdfs-nn
   replicas: 1
+  selector:
+    matchLabels:
+      app: {{ template "hadoop.name" . }}
   template:
     metadata:
       labels:
