add spark master module

--- a/hdfs/templates/hdfs-dn-statefulset.yaml
+++ b/hdfs/templates/hdfs-dn-statefulset.yaml
@@ -13,6 +13,11 @@ metadata:
 spec:
   serviceName: {{ template "hadoop.fullname" . }}-hdfs-dn
   replicas: 1
+  selector:
+    matchLabels:
+      app: {{ template "hadoop.name" . }}
+      release: {{ .Release.Name }}
+      component: hdfs-dn
   template:
     metadata:
       labels:
