--- a/hdfs/templates/hdfs-dn-statefulset.yaml
+++ b/hdfs/templates/hdfs-dn-statefulset.yaml
@@ -32,7 +32,7 @@ spec:
             labelSelector:
               matchLabels:
                 app:  {{ template "hadoop.name" . }}
-                release: {{ .Release.Name | quote }}
+                release: {{ .Release.Name }}
                 component: hdfs-dn
         {{- else if eq .Values.antiAffinity "soft" }}
           preferredDuringSchedulingIgnoredDuringExecution:
@@ -42,7 +42,7 @@ spec:
               labelSelector:
                 matchLabels:
                   app:  {{ template "hadoop.name" . }}
-                  release: {{ .Release.Name | quote }}
+                  release: {{ .Release.Name }}
                   component: hdfs-dn
         {{- end }}
       terminationGracePeriodSeconds: 0
