changed helm chart

--- a/hdfs/templates/hadoop-configmap.yaml
+++ b/hdfs/templates/hadoop-configmap.yaml
@@ -90,18 +90,13 @@ data:
 
       <property>
         <name>dfs.datanode.data.dir</name>
-        <value>file:///datanode</value>
+        <value>file:///root/hdfs/datanode</value>
         <description>DataNode directory</description>
-      </property>
-    
-      <property>
-        <name>dfs.permissions.enabled</name>
-        <value>false</value>
       </property>
 
       <property>
         <name>dfs.namenode.name.dir</name>
-        <value>file:///namenode</value>
+        <value>file:///root/hdfs/namenode</value>
         <description>NameNode directory for namespace and transaction logs storage.</description>
       </property>
 
